--- a/resources/lang/th/translation.json
+++ b/resources/lang/th/translation.json
@@ -83,6 +83,7 @@
         "oops":"Oops!!",
         "err_username_or_passwd_notfound" : "เข้าสู่ระบบไม่สำเร็จ กรุณาตรวจสอบว่าได้กรอกชื่อผู้ใช้และรหัสผ่านถูกต้อง, หรือถูกปิดการใช้งานอยู่",
         "login_wrong":"เข้าสู่ระบบไม่สำเร็จกรุณาตรวจสอบว่าได้กรอกชื่อผู้ใช้และรหัสผ่านถูกต้องแล้ว",
+        "loginSessionExpired": "เซสชั่นหมดอายุ กรุณาเข้าระบบอีกครั้ง",
         "accountLocked":"ผู้ใช้ถูกระงับการใช้งานกรุณาติดต่อผู้ดูแลระบบ",
         "seleted_data_del_frist":"กรุณาเลือกข้อมูลที่ต้องการลบอย่างน้อย 1 รายการ",
         "validate_require":"ข้อมูลนี้ต้องไม่เป็นค่าว่าง",
@@ -95,7 +96,8 @@
         "validate_date":"รูปแบบวันที่ ต้องระบุในรูปแบบ 'yyyy-MM-dd' เท่านั้น",
         "contact_admin":"เกิดข้อผิดพลาดกรุณาติดต่อผู้ดูแลระบบ",
         "error_something_wrong":"Something went wrong!!",
-        "permissionDeny":"ผู้ใช้ไม่ได้รับสิทธิ์ในการเข้าถึงข้อมูลนี้"
+        "permissionDeny":"ผู้ใช้ไม่ได้รับสิทธิ์ในการเข้าถึงข้อมูลนี้",
+        "err_404": "ไม่พบหน้าที่ต้องการ"
       },
       "success": {
         "success": "สำเร็จ",
